--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@google/generative-ai": "^0.24.1",
     "@lark-base-open/node-sdk": "^1.0.1",
+    "cors": "^2.8.5",
     "express": "^5.1.0",
     "node-fetch": "^2.7.0"
   }
